--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,31 @@ main {
 .green{
     background-color: #67E2AE;
 }
+
+.tasks-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: .9375rem;
+}
+
+.taskCard {
+    display: flex;
+    align-items: center;
+    background-color: #FFFFFF;
+    font-weight: 700;
+    font-size: .9375rem;
+    line-height: 100%;
+    width: 17.5rem;
+    height: 3.75rem;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px 0px #364E7E1A;
+    padding: 1.25rem;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+
+.taskCard:hover {
+    transform: scale(1.02);
+}
+
