--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,34 @@ main {
     font-size: 1.125rem;
     line-height: 100%;
 }
+
+.modal label {
+    font-weight: 700;
+    color: #828FA3;
+    display: block;
+    font-size: 12px;
+    line-height: 100%;
+    margin: 10px 0 5px;
+}
+
+.modal input,
+.modal textarea,
+.modal select {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #828FA340;
+    font-size: .875rem;
+    font-weight: 500;
+    line-height: 1.4375rem;
+    margin-bottom: 10px;
+}
+
+.modal textarea {
+    resize: none;
+    overflow: auto;
+}
+
+#task-status {
+    cursor: pointer;
+}
