--- a/styles.css
+++ b/styles.css
@@ -225,3 +225,81 @@ main {
 .faded {
     color: #828FA3;
 }
+
+.close-btn {
+    position: absolute;
+    color: #EA5555;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 1.5625rem;
+    cursor: pointer;
+    font-weight: bold;
+    width: 1.5625rem;
+    height: 1.5625rem;
+}
+
+.close-btn:hover {
+    color: #FF9898;
+}
+
+
+/* Mobile Screen Size - Media Query */
+@media (max-width: 376px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+        border-right: unset;
+    }
+
+    .logo {
+        width: 70%;
+        padding: 20px 20px 0 20px;
+    }
+
+    nav {
+        display: none;
+    }
+
+    header {
+        padding: 0 20px 20px 20px;
+        border-bottom: unset;
+        font-size: .9375rem;
+    }
+
+    .columns {
+        padding: 20px;
+    }
+
+    main {
+        max-width: 100%;
+        gap: 2.1875rem;
+    }
+
+    .column {
+        width: 100%;
+    }
+
+    .taskCard {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .launch-sidebar {
+        padding: 0;
+    }
+
+    .dropdown-arrow {
+        display: inline;
+    }
+
+    .modal input,
+    .modal textarea,
+    .modal select {
+        font-size: 13px;
+    }
+}
